# aya_snippets

./: .gitignore  README.md
hello-world/: Cargo.toml
hello-world/ebpf/src/: main.rs  progs.rs
hello-world/user/: Cargo.toml
hello-world/user/src/: ebpf.rs  main.rs
hello-world/xtask/src/: main.rs
lima-template/: ubuntu-focal.yaml
tail-calls/: Cargo.toml
tail-calls/ebpf/: Cargo.toml  rust-toolchain.toml
tail-calls/ebpf/.cargo/: config.toml
tail-calls/ebpf/src/: bindings.rs  main.rs  maps.rs  progs.rs
tail-calls/user/: Cargo.toml
tail-calls/user/src/: ebpf.rs
tail-calls/xtask/: Cargo.toml
tail-calls/xtask/src/: build.rs  build_ebpf.rs  codegen.rs  main.rs
