[package]
name = "user"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
aya = "0.13.1"
aya-log = "0.2.0"
bytes = "1.6.0"
libc = "0.2.155"
tokio = { version = "1.38.0", features = ["full"] }


[[bin]]
name = "hello-world"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.11.0"
